Phase 1: Full GUI overhaul - Component API, Unicode titles, hex colors, GUIUtils, sounds, drag protection