@@ -2,16 +2,16 @@ package id.naturalsmp.naturaldungeon.stats;
 
 import id.naturalsmp.naturaldungeon.NaturalDungeon;
 import id.naturalsmp.naturaldungeon.utils.ChatUtils;
-import org.bukkit.Bukkit;
+import id.naturalsmp.naturaldungeon.utils.GUIUtils;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.inventory.InventoryClickEvent;
+import org.bukkit.event.inventory.InventoryDragEvent;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 
 import java.util.*;
@@ -33,63 +33,77 @@ public class StatsGUI implements Listener {
 
     public void open(Player viewer, Player target) {
         PlayerStats stats = plugin.getPlayerStatsManager().getStats(target.getUniqueId());
-        String title = ChatUtils.colorize("&6&lSTATISTIK &7" + target.getName());
-        Inventory inv = Bukkit.createInventory(new StatsHolder(), 27, title);
 
-        // Fill border
-        ItemStack filler = createItem(Material.GRAY_STAINED_GLASS_PANE, " ");
-        for (int i = 0; i < 27; i++)
-            inv.setItem(i, filler);
+        Inventory inv = GUIUtils.createGUI(new StatsHolder(), 45,
+                "&#AA44FF📊 ꜱᴛᴀᴛɪꜱᴛɪᴋ &7— &f" + target.getName());
 
-        // Player head
+        GUIUtils.fillBorder(inv, Material.BLACK_STAINED_GLASS_PANE);
+        GUIUtils.fillEmpty(inv, Material.GRAY_STAINED_GLASS_PANE);
+
+        // ─── Player Head (slot 4) ───
         ItemStack head = new ItemStack(Material.PLAYER_HEAD);
         SkullMeta skullMeta = (SkullMeta) head.getItemMeta();
         skullMeta.setOwningPlayer(target);
-        skullMeta.setDisplayName(ChatUtils.colorize("&b&l" + target.getName()));
-        skullMeta.setLore(Arrays.asList(
-                ChatUtils.colorize("&7Dungeon Statistics"),
-                ""));
+        skullMeta.displayName(GUIUtils.toComponent("&#FFD700&l" + target.getName()));
+        skullMeta.lore(List.of(
+                GUIUtils.toComponent(GUIUtils.separator()),
+                GUIUtils.toComponent("&7Dungeon Adventurer"),
+                GUIUtils.toComponent("&7Total Clears: &#55FF55" + stats.getTotalClears())));
         head.setItemMeta(skullMeta);
         inv.setItem(4, head);
 
-        // Total Clears
-        inv.setItem(10, createStatItem(Material.DIAMOND_SWORD, "&a&lTotal Clears",
-                "&f" + stats.getTotalClears()));
+        // ─── Combat Stats Row (slots 19-21) ───
+        inv.setItem(19, GUIUtils.createItem(Material.DIAMOND_SWORD,
+                "&#55FF55&l⚔ ᴛᴏᴛᴀʟ ᴄʟᴇᴀʀꜱ",
+                GUIUtils.separator(),
+                "  &7» &#55FF55" + stats.getTotalClears()));
 
-        // Total Deaths
-        inv.setItem(11, createStatItem(Material.SKELETON_SKULL, "&c&lTotal Deaths",
-                "&f" + stats.getTotalDeaths()));
+        inv.setItem(20, GUIUtils.createItem(Material.SKELETON_SKULL,
+                "&#FF5555&l💀 ᴛᴏᴛᴀʟ ᴅᴇᴀᴛʜꜱ",
+                GUIUtils.separator(),
+                "  &7» &#FF5555" + stats.getTotalDeaths()));
 
-        // Flawless Clears
-        inv.setItem(12, createStatItem(Material.NETHER_STAR, "&d&lFlawless Clears",
-                "&f" + stats.getFlawlessClears()));
+        inv.setItem(21, GUIUtils.createItem(Material.NETHER_STAR,
+                "&#AA44FF&l✦ ꜰʟᴀᴡʟᴇꜱꜱ ᴄʟᴇᴀʀꜱ",
+                GUIUtils.separator(),
+                "  &7» &#AA44FF" + stats.getFlawlessClears()));
 
-        // Daily Clears
-        inv.setItem(13, createStatItem(Material.GOLD_NUGGET, "&e&lDaily Clears",
-                "&f" + stats.getDailyClears()));
+        // ─── Performance Stats Row (slots 23-25) ───
+        inv.setItem(23, GUIUtils.createItem(Material.GOLD_NUGGET,
+                "&#FFAA00&l📅 ᴅᴀɪʟʏ ᴄʟᴇᴀʀꜱ",
+                GUIUtils.separator(),
+                "  &7» &#FFAA00" + stats.getDailyClears()));
 
-        // Fastest Time
+        inv.setItem(24, GUIUtils.createItem(Material.GOLD_INGOT,
+                "&#FFD700&l📆 ᴡᴇᴇᴋʟʏ ᴄʟᴇᴀʀꜱ",
+                GUIUtils.separator(),
+                "  &7» &#FFD700" + stats.getWeeklyClears()));
+
         String timeStr = stats.getFastestTime() == Long.MAX_VALUE ? "N/A"
                 : formatTime(stats.getFastestTime());
-        inv.setItem(14, createStatItem(Material.CLOCK, "&e&lFastest Time",
-                "&f" + timeStr));
+        inv.setItem(25, GUIUtils.createItem(Material.CLOCK,
+                "&#55CCFF&l⏱ ꜰᴀꜱᴛᴇꜱᴛ ᴛɪᴍᴇ",
+                GUIUtils.separator(),
+                "  &7» &#55CCFF" + timeStr));
 
-        // Damage Dealt
-        inv.setItem(15, createStatItem(Material.IRON_SWORD, "&6&lDamage Dealt",
-                "&f" + String.format("%.0f", stats.getTotalDamageDealt())));
+        // ─── Damage Stats (slots 29-30) ───
+        inv.setItem(29, GUIUtils.createItem(Material.IRON_SWORD,
+                "&#FFAA00&l💥 ᴅᴀᴍᴀɢᴇ ᴅᴇᴀʟᴛ",
+                GUIUtils.separator(),
+                "  &7» &f" + ChatUtils.formatLarge(stats.getTotalDamageDealt())));
 
-        // Damage Taken
-        inv.setItem(16, createStatItem(Material.SHIELD, "&4&lDamage Taken",
-                "&f" + String.format("%.0f", stats.getTotalDamageTaken())));
+        inv.setItem(30, GUIUtils.createItem(Material.SHIELD,
+                "&#FF5555&l🛡 ᴅᴀᴍᴀɢᴇ ᴛᴀᴋᴇɴ",
+                GUIUtils.separator(),
+                "  &7» &f" + ChatUtils.formatLarge(stats.getTotalDamageTaken())));
 
-        // Weekly Clears
-        inv.setItem(21, createStatItem(Material.GOLD_INGOT, "&6&lWeekly Clears",
-                "&f" + stats.getWeeklyClears()));
-
-        // Close
-        inv.setItem(22, createItem(Material.BARRIER, "&cTutup"));
+        // ─── Close Button (slot 40) ───
+        inv.setItem(40, GUIUtils.createItem(Material.BARRIER,
+                "&#FF5555&l✖ ᴛᴜᴛᴜᴘ",
+                "&7Klik untuk menutup."));
 
         viewer.openInventory(inv);
+        GUIUtils.playOpenSound(viewer);
     }
 
     @EventHandler
@@ -97,27 +111,18 @@ public class StatsGUI implements Listener {
         if (!(e.getInventory().getHolder() instanceof StatsHolder))
             return;
         e.setCancelled(true);
+        if (e.getClickedInventory() != e.getView().getTopInventory())
+            return;
         if (e.getCurrentItem() != null && e.getCurrentItem().getType() == Material.BARRIER) {
+            GUIUtils.playClickSound((Player) e.getWhoClicked());
             e.getWhoClicked().closeInventory();
         }
     }
 
-    private ItemStack createStatItem(Material mat, String name, String value) {
-        return createItem(mat, name, "", ChatUtils.colorize("  &7» " + value));
-    }
-
-    private ItemStack createItem(Material mat, String name, String... lore) {
-        ItemStack item = new ItemStack(mat);
-        ItemMeta meta = item.getItemMeta();
-        meta.setDisplayName(ChatUtils.colorize(name));
-        if (lore.length > 0) {
-            List<String> list = new ArrayList<>();
-            for (String l : lore)
-                list.add(ChatUtils.colorize(l));
-            meta.setLore(list);
-        }
-        item.setItemMeta(meta);
-        return item;
+    @EventHandler
+    public void onDrag(InventoryDragEvent e) {
+        if (e.getInventory().getHolder() instanceof StatsHolder)
+            e.setCancelled(true);
     }
 
     private String formatTime(long ms) {
